# shandorcode

./: .gitignore  COMPLETE_SETUP_SUMMARY.md  DEPLOYMENT_STATUS.md  LICENSE-COMMERCIAL.txt  LICENSE.txt  LICENSING.md  PERFORMANCE_UPGRADE.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  README_GITHUB.md  RENAME_SUMMARY.md  pyproject.toml  reorganize.ps1  start.bat  start.sh
deployment/: .env.example  .gitignore  COMPLETE_TIMELINE.md  CONTROL_PANELS.md  Caddyfile  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  HOSTINGER_DEPLOYMENT.md  NAMECHEAP_DNS_SETUP.md  QUICK_START.md  README.md  READY_NOW.md  READY_TO_DEPLOY.md  SIMPLE_MANUAL_DEPLOY.md  START_HERE.md  VPS_CREDENTIALS.txt  deploy-helper.ps1  deploy.sh  docker-compose.yml  hostinger-setup.sh  vps-setup.sh
docs/: architecture.md  usage.md
examples/: analyze_gozerai_project.py
scripts/: export_public.sh
src/: licensing.py
src/analyzers/: __init__.py  ai_insights.py
src/api/: server.py
src/core/: analyzer.py  lightning_analyzer.py  models.py  optimized_analyzer.py  watcher.py
src/parsers/: javascript_parser.py  python_parser.py
tests/: test_codegraph.py  test_shandorcode.py
